  Sachsenheim). Closes #305.
- Override ``UnvalidatedSchema.copy`` (Peter Demin).
- Fix: README link (Gabriel Wainer).
- Fix: Regression: allow_unknown causes dictionary validation to fail with
  a KeyError. Closes #302 (Frank Sachsenheim)
- Fix: Error when setting fields as tuples instead of lists. Closes #271
  (Sebastian Rajo).
- CI: Reactivate testing on PyPy3 (Frank Sachsenheim).

Version 1.1
-----------

Released on January 25, 2017.

- New: Python 3.6 support (Frank Sachsenheim)
- New: Users can implement their own semantics in Validator._lookup_field
  (Frank Sachsenheim).
- New: Allow applying of ``empty`` rule to sequences and mappings. Closes #270
  (Frank Sachsenheim).

- Fix: Better handling of unicode in ``allowed`` rule (Michael Klich). Closes
  #280.
- Fix: Rules sets with normalization rules fail. Closes #283 (Frank
  Sachsenheim).
- Fix: Spelling error in RULE_SCHEMA_SEPARATOR constant (Antoine Lubineau)
- Fix: Expand schemas and rules sets when added to a registry. Closes #284
  (Frank Sachsenheim)
- Fix: ``readonly`` conflicts with ``default`` rule. Closes #268 (Dominik
  Kellner).
- Fix: Creating custom Validator instance with ``_validator_*`` method raises
  ``SchemaError``. Closes #265 (Frank Sachsenheim).
- Fix: Consistently use new style classes (Dominik Kellner).
- Fix: ``NotImplemented`` does not derive from ``BaseException`` (Bryan W.
  Weber).

- Completely switch to py.test. Closes #213 (Frank Sachsenheim).
- Convert ``self.assert`` method calls to plain ``assert`` calls supported by
  pytest. Addresses #213 (Bruno Oliveira).

- Docs: Clarifications concerning dependencies and unique rules (Frank
  Sachsenheim)
- Docs: Fix custom coerces documentation. Closes #285 (gilbsgilbs).
- Docs: Add note concerning regex flags. Closes #173 (Frank Sachsenheim).
- Docs: Explain that normalization and coercion are performed on a copy of the
  original document (Sergey Leshchenko).

Version 1.0.1
-------------

Released on September 1, 2016.
